Sat Sep 11 12:32:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_set_kcode, rb_get_kcode): removed
	  zombie prototype declarations.  a patch from Eric Hodel
	  at [ruby-core:32305].

Thu Sep  9 23:25:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each): skip allocator frames which have no
	  name.  [ruby-core:32231]

Thu Sep  9 10:44:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_env.rb (test_aset): OpenBSD acts like NetBSD in
	  that it ignores characters after = in ENV.
	  patched by Jeremy Evans [ruby-core:32184]

Thu Sep  9 09:02:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/rbinstall.rb (install?): gemspec filename should include
	  its version. patched by Luis Lavena [ruby-core:32165]

Mon Sep  6 11:03:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Fixed wrong check of missing functions. Patch by Adrian Quark.
	  ref #3400
	  The patch contains following comment:
	    This patch should avoid unnecessary incompatibility with future
	    versions of Openssl.  Changes suggested by bmaher_at_amazon.com.

Mon Sep  6 10:31:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_s_get_line_buffer):
	  Readline.line_buffer should return locale string.
	  [ruby-dev:42184] #3791

Sat Sep  4 23:48:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): symlink target should be in
	  filesystem encoding.

Wed Sep  1 14:33:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_zip): fix typo of rdoc.
	  patched by Andrei Kulakov [ruby-core:31974]

Wed Sep  1 12:56:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_suppress_tracing): restore the state and invoke
	  the func with normal state.  a patch from Satoshi Shiba <shiba
	  AT rvm.jp> at [ruby-dev:42162].  [ruby-core:31783]

Tue Aug 31 17:32:34 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
